--- a/Creational/Abstract Factory.ipynb
+++ b/Creational/Abstract Factory.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "### 추상 팩토리 패턴이란? \n",
     "****\n",
-    "- 이 패턴은 관련성이 있는 여러 개의 객체들을 일관된 방식으로 생성하는 방법을 제공\n",
+    "- 추상 팩토리 패턴은 다양한 구성 요소 별로 객체의 집합(군)을 만들기 위한 패턴\n",
+    "- 다양한 구성 요소 별로 '객체의 집합'을 생성해야 할 때 유용\n",
+    "- 관련성 있는 여러 종류의 객체를 일관된 방식으로 생성하는 패턴\n",
     "\n",
     "</br> \n",
     "\n",
@@ -31,21 +33,8 @@
     "\n",
     "</br> \n",
     "\n",
-    "### 장점\n",
-    "****\n",
-    "1. 객체 생성 과정을 유연하게 처리   \n",
-    "    객체 생성 과정이 복잡한 경우, 단계별로 처리하는 빌더 패턴을 사용하여 객체를 생성할 수 있다.   \n",
-    "2. 객체 생성 과정을 단순화 함   \n",
-    "    객체 생성 과정을 단계별로 처리하면서 생성 과정을 단순화 -> 코드의 가독성을 높일 수 있다.   \n",
-    "3. 객체 생성 시 불변성을 보장 가능    \n",
-    "    생성된 객체의 속성값을 변경할 수 없다. 이는 객체지향 프로그래밍의 핵심 원칙 중 하나인 \"불변성 원칙\"을 따름.\n",
-    "\n",
-    "</br> \n",
-    "\n",
-    "### 단점\n",
-    "****\n",
-    "1. 빌더 클래스를 따로 구현해야 하기 때문에 코드의 양이 많아짐.    \n",
-    "2. 객체 생성 과정이 단계별로 처리되기 때문에 객체 생성 시간이 더 오래 걸림.    "
+    "### 추상 팩토리 패턴 vs 팩토리 메소드 패턴 차이\n",
+    "팩토리 메소드는 one product를 생성할 때 사용하고 추상 팩토리는 관련된 제품군들을 생성할 때 사용\n"
    ]
   },
   {
