--- a/Creational/Abstract Factory.ipynb
+++ b/Creational/Abstract Factory.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ## Abstract Factory Pattern\n",
+    "## Abstract Factory Pattern\n",
     "\n",
     "### 추상 팩토리 패턴이란? \n",
     "****\n",
